@@ -255,8 +255,11 @@ int compare_entries(struct Entry* first, struct Entry* second)
   if (first->size != second->size)
     return -1;
 
-  if (first->size == 0)
-    return -1;
+  if (ignore_empty_flag)
+  {
+    if (first->size == 0)
+      return -1;
+  }
     
   if (first->size >= sample_limit)
   {
